# IKP_Projekat_tim35_heap_manager

./: .gitignore  CMakeLists.txt  run.bat
client/: client.c
docs/: SPEC.md
include/: heap_manager.h  hm_config.h  hm_internal.h  hm_jobs.h  hm_metrics.h  hm_results.h
server/: CMakeLists.txt  main.c  server.c
src/: coalesce.c  freelist_nextfit.c  heap_manager.c  jobs.c  metrics.c  platform.c  result_map.c  segment.c  thread_pool.c
tests/: basic.txt  fragmentation.txt  segments_limit.txt  stress_test.txt
